# projectM-seizureRobotzes

./: .gitignore  BUILDING-cmake.md  CMakeLists.txt  PROJECTM-HANDOFF.md  README.md  agents.md  agents.txt
apps/quest-openxr-android/: README.md  settings.gradle
apps/quest-openxr-android/app/: build.gradle
apps/quest-openxr-android/app/src/main/: AndroidManifest.xml
apps/quest-openxr-android/app/src/main/cpp/: CMakeLists.txt  main.cpp
apps/quest-openxr-android/app/src/main/java/com/projectm/questxr/: QuestNativeActivity.java
apps/quest-openxr-android/app/src/main/res/values/: strings.xml
docs/: PROJECTM-INTEGRATION.md
logs/: context-handoff-2026-02-13-mic-beat-assist.md  quest-live-current.path  repro-20260212-0334-summary.txt
scripts/: build-projectm-android-sdk.sh  github-release.sh  quest_logcat_capture.sh  release-and-publish.sh  release-build.sh
src/: CMakeLists.txt
src/quest-openxr/: CMakeLists.txt  main.cpp
